objects/ssot__CompliancePolicyClauseVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ChangeSummaryText__c</fullName>
        <label>Change Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClauseText__c</fullName>
        <label>Clause Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CompliancePolicyClauseId__c</fullName>
        <label>Compliance Policy Clause</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Compliance Policy Clause Version Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsAIGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is AI Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceContentDocumentId__c</fullName>
        <label>Source Content Document</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762693231_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicyClauseVersion_Compli_rel</label>
        <referenceTo>ssot__CompliancePolicyClause__dlm</referenceTo>
        <relationshipLabel>CompliancePolicyClauseVersion_Compli_rel</relationshipLabel>
        <relationshipName>rel_1752762693231_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1752762701447_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CompliancePolicyClauseVersion_Source_rel</label>
        <referenceTo>ssot__ContentDocument__dlm</referenceTo>
        <relationshipLabel>CompliancePolicyClauseVersion_Source_rel</relationshipLabel>
        <relationshipName>rel_1752762701447_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>